--- a/garijo.html
+++ b/garijo.html
@@ -173,7 +173,7 @@ François GARIJO a travaillé pour les plus grands groupes français, allemands 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cTwlrorhdgkLcK2SGMEbG8za5O+8sz0WnsmuvH/cZfp5a32KShxbm8/YTTi0fn9DwNzHq5+ZFN9GgK3Ti3e9ZKP/JKFM8hy/zXr427B4RL9Fw/p7t7yBChrz7oRlloqC">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zSRd5rFnVg2Cf8F0SckKpEqhzQH0b2m/6ubEtM99oCehD7kz87C6PiUY9AKqsyfDAq1AnF37OB95bFgTR5O5EPnLPVa+QIp0r4JA/fYE9BDeL/7ZnFFy7LtPn21piKYs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -266,7 +266,7 @@ François GARIJO a travaillé pour les plus grands groupes français, allemands 
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
